updated baseball pointer

--- a/css/main.css
+++ b/css/main.css
@@ -12,13 +12,13 @@
 
 .transparent-text {
   color: transparent !important; }
-  
+
   /* */
   /*
   /* kamari!
   /*
-  /* */ 
-.title-row {
+  /* */
+.section-title {
   color: white;
   text-align: center;
   font-style: italic;
